--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,50 @@
+absl-py==2.1.0
+astunparse==1.6.3
 attrs==24.2.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 et_xmlfile==2.0.0
+flatbuffers==24.3.25
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.68.0
 h11==0.14.0
+h5py==3.12.1
 idna==3.10
-numpy==2.1.3
+keras==3.6.0
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+ml-dtypes==0.4.1
+namex==0.0.8
+numpy==2.0.2
 opencv-python==4.10.0.84
 openpyxl==3.1.5
+opt_einsum==3.4.0
+optree==0.13.1
 outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
+protobuf==5.28.3
+Pygments==2.18.0
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
+rich==13.9.4
 selenium==4.26.1
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensorflow==2.18.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==2.5.0
 trio==0.27.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
@@ -27,4 +52,6 @@ tzdata==2024.2
 urllib3==2.2.3
 webdriver-manager==4.0.2
 websocket-client==1.8.0
+Werkzeug==3.1.3
+wrapt==1.17.0
 wsproto==1.2.0
