--- a/requirements.txt
+++ b/requirements.txt
@@ -80,6 +80,7 @@ nest-asyncio==1.6.0
 notebook_shim==0.2.4
 numpy==2.0.2
 opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
 openpyxl==3.1.5
 opt_einsum==3.4.0
 optree==0.13.1
